# boost

./: .gitmodules  base.cmake  conandata.yml
boost/config/compiler/: visualc.hpp
boost/mpl/aux_/: integral_wrapper.hpp
boost/polygon/: isotropy.hpp  point_concept.hpp  point_data.hpp  polygon_45_set_concept.hpp  polygon_45_set_data.hpp  polygon_90_set_concept.hpp  polygon_90_set_data.hpp  polygon_90_set_traits.hpp  polygon_set_concept.hpp  polygon_set_data.hpp  polygon_traits.hpp  rectangle_concept.hpp  rectangle_data.hpp  transform.hpp
boost/polygon/detail/: iterator_compact_to_points.hpp  iterator_geometry_to_set.hpp  iterator_points_to_compact.hpp  polygon_arbitrary_formation.hpp  polygon_formation.hpp  property_merge.hpp  rectangle_formation.hpp  scan_arbitrary.hpp
libs/: CMakeLists.txt
libs/file_system/: CMakeLists.txt
libs/header/: CMakeLists.txt
libs/iostreams/: CMakeLists.txt
libs/locale/: CMakeLists.txt
libs/log/: CMakeLists.txt
libs/nowide/: CMakeLists.txt
libs/python/: CMakeLists.txt
libs/regex/: CMakeLists.txt
libs/serialization/: CMakeLists.txt
libs/test/: CMakeLists.txt
libs/thread/: CMakeLists.txt
part/: CMakeLists.txt
