__install_inc_directory(${CMAKE_CURRENT_SOURCE_DIR}/../boost)

set(boost_includes ${CMAKE_CURRENT_SOURCE_DIR}/../)
include_directories(${boost_includes})

if(CC_BC_EMCC OR CC_BC_LINUX)
	add_subdirectory(chrono)
	add_subdirectory(file_system)
	add_subdirectory(iostreams)
	add_subdirectory(nowide)
	add_subdirectory(program_options)
	add_subdirectory(regex)
	add_subdirectory(serialization)
	add_subdirectory(system)
	add_subdirectory(thread)
else()
	__add_all_directory()
endif()